--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="envelope"></div>
             <div class="front"></div>
             <div class= "card">
-                <div class="text">Happy Birthday Jumo</br> You're a real gee</div>
+                <div class="text">Happy Birthday Jumo</br> You're a real gee</br> Live long and prosper ore mi</div>
         <div class="heart"></div>
         </div>
     <div class="hearts">
